Fixed general mobile alignment

--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -22,6 +22,7 @@
         margin-right: 12px
         +m
             display: none
+            margin-bottom: 5ex
 
 ///* The sticky class is added to the navbar with JS when it reaches its scroll position */
 //.sticky
